Reduced Section Margin top from 100/150 to 70px

--- a/ubenwaApp/css/agency.css
+++ b/ubenwaApp/css/agency.css
@@ -398,7 +398,7 @@ header .intro-text .intro-heading {
 }
 
 section {
-    padding: 100px 0;
+    padding: 70px 0;
 }
 
 section h2.section-heading {
@@ -418,7 +418,7 @@ section h3.section-subheading {
 
 @media(min-width:768px) {
     section {
-        padding: 150px 0;
+        padding: 70px 0;
     }
 }
 
@@ -711,7 +711,7 @@ section h3.section-subheading {
 
 .team-member img {
     margin: 0 auto;
-    border: 7px solid #fff;
+    border: 7px solid #fed136;
 }
 
 .team-member h4 {
