--- a/ubenwaApp/css/agency.css
+++ b/ubenwaApp/css/agency.css
@@ -14,10 +14,19 @@ margin-top: -30px;
 border-top: 3px solid #FEC503;
 }
 
+
 .intro-description{
-    margin-top: 65px;
+    margin-top: 25px;
 margin-bottom: 20px;
 font-size: 2em;
+}
+
+@media only screen and (max-device-width: 480px) {
+    .intro-description{
+    margin-top: 25px;
+    margin-bottom: 20px;
+    font-size: 1.4em;
+    }
 }
 
 .intro-newsletter{
@@ -37,6 +46,21 @@ margin-bottom: 32px;
 box-sizing: border-box;
 }
 
+@media only screen and (max-device-width: 480px){
+    .newsletter-form {
+    position: relative;
+    max-width: 556px;
+    min-width: 200px;
+    display: inline-block;
+    padding-right: 169px;
+    height: 40px;
+    margin-bottom: 32px;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    }
+
+}
 .button {
 color: white;
 background: #FEC503;
@@ -356,11 +380,35 @@ header {
     -o-background-size: cover;
 }
 
+.a100px-margin{
+margin-left: 100px;
+}
+.center{
+    text-align: center;
+}
 header .intro-text {
-    padding-top: 150px;
+    padding-top: 50px;
     padding-bottom: 50px;
 }
+@media only screen and (max-device-width: 480px){
+    header {
+    height: 800px;
+    color: #fff;
+    background-attachment: scroll;
+    background-image: url(../img/mother_and_babe_header2.jpg);
+    background-position: center center;
+    background-repeat: none;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+    
+.center{
+    text-align: center;
+}
 
+}
 header .intro-text .intro-lead-in {
     margin-bottom: 25px;
     font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -380,7 +428,7 @@ header .intro-text .intro-heading {
 
 @media(min-width:768px) {
     header .intro-text {
-        padding-top: 160px;
+        padding-top: 115px;
         padding-bottom: 200px;
     }
 
